[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Mud.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Carrot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/World.gd" type="Script" id=5]
[ext_resource path="res://Scenes/NPC.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/DialogBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Font/Comfortaa-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.415686, 0.764706, 0.454902, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=4]

[sub_resource type="DynamicFont" id=5]
size = 36
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 28
use_filter = true
font_data = ExtResource( 8 )

[node name="World" type="Spatial"]
script = ExtResource( 5 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 50, 0, 0, 0, 1, 0, 0, 0, 50, 0, -1, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.35598, 7.73595 )

[node name="PlayerRange" type="Area" parent="Player"]

[node name="CollisionShape" type="CollisionShape" parent="Player/PlayerRange"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, -1 )
shape = SubResource( 4 )

[node name="Mud" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19, 0.0559756, 22.736 )

[node name="Carrot" parent="Mud" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.1732, 0, -14.2443 )

[node name="Carrot2" parent="Mud" instance=ExtResource( 4 )]
transform = Transform( 0.674689, 0, 0.738102, 0, 1, 0, -0.738102, 0, 0.674689, 1.38419, 0, -14.2443 )

[node name="Carrot3" parent="Mud" instance=ExtResource( 4 )]
transform = Transform( 0.342332, 0, 0.939579, 0, 1, 0, -0.939579, 0, 0.342332, -10.768, 0, -14.2443 )

[node name="NPC" parent="." instance=ExtResource( 6 )]

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="DialogBox" parent="." instance=ExtResource( 7 )]

[node name="PauseScreen" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.243137 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -74.5
margin_right = 127.5
margin_bottom = 74.5
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="Label" parent="PauseScreen/ColorRect/VBoxContainer"]
margin_right = 255.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 5 )
text = "Game Paused"

[node name="ResumeButton" type="Button" parent="PauseScreen/ColorRect/VBoxContainer"]
margin_top = 57.0
margin_right = 255.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 6 )
text = "Resume"

[node name="SaveButton" type="Button" parent="PauseScreen/ColorRect/VBoxContainer"]
margin_top = 111.0
margin_right = 255.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 6 )
text = "Save"
[connection signal="body_entered" from="Player/PlayerRange" to="." method="_on_PlayerRange_body_entered"]
[connection signal="body_exited" from="Player/PlayerRange" to="." method="_on_PlayerRange_body_exited"]
[connection signal="pressed" from="PauseScreen/ColorRect/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseScreen/ColorRect/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
